# fomod-installer

./: .gitignore  Directory.Build.Props  FomodInstaller.sln  NuGet.Build.props  README.md  build.js  changelog-template.hbs  cleanup.js  index.d.ts  index.js  install.cmd  install.js  install.ps1  install.sh  package.json
src/ModInstaller.Native.TypeScript/: .gitignore  .npmignore  CMakeLists.txt  binding.gyp  build.js  package.json  postinstall.js  tsconfig.json  tsconfig.module.json  webpack.config.js
src/ModInstaller.Native.TypeScript/src/: Bindings.Common.hpp  Bindings.FileSystem.Callbacks.hpp  Bindings.FileSystem.Implementation.hpp  Bindings.FileSystem.hpp  Bindings.ModInstaller.Callbacks.hpp  Bindings.ModInstaller.Implementation.hpp  Bindings.ModInstaller.hpp  Common.ts  FileSystem.ts  Logger.ts  ModInstaller.ts  Utils.Async.hpp  Utils.Callback.hpp  index.ts  logger.hpp  main.cpp  utils.hpp
src/ModInstaller.Native.TypeScript/src-native/: Bindings.Common.Implementation.hpp  Bindings.Common.hpp  Bindings.FileSystem.Callbacks.hpp  Bindings.FileSystem.Implementation.hpp  Bindings.FileSystem.hpp  Bindings.Logging.Callbacks.hpp  Bindings.Logging.Implementation.hpp  Bindings.Logging.hpp  Bindings.ModInstaller.Callbacks.hpp  Bindings.ModInstaller.Implementation.hpp  Bindings.ModInstaller.hpp  Logger.hpp  Platform.hpp  Utils.Async.hpp  Utils.Callback.hpp  Utils.Callbacks.hpp  Utils.Converters.hpp  Utils.Generic.hpp  Utils.JS.hpp  Utils.Return.hpp  Utils.Utf.hpp  logger.hpp  main.cpp  utils.hpp
src/ModInstaller.Native.TypeScript/test/: ModInstaller.shared.spec.ts  (+3 more)
(+405 files in other folders)
